; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ehca/extr_ehca_uverbs.c_ehca_alloc_ucontext.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ehca/extr_ehca_uverbs.c_ehca_alloc_ucontext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_ucontext = type { i32 }
%struct.ib_device = type { i32 }
%struct.ib_udata = type { i32 }
%struct.ehca_ucontext = type { %struct.ib_ucontext }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Out of memory device=%p\00", align 1
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ib_ucontext* @ehca_alloc_ucontext(%struct.ib_device* %0, %struct.ib_udata* %1) #0 {
  %3 = alloca %struct.ib_ucontext*, align 8
  %4 = alloca %struct.ib_device*, align 8
  %5 = alloca %struct.ib_udata*, align 8
  %6 = alloca %struct.ehca_ucontext*, align 8
  store %struct.ib_device* %0, %struct.ib_device** %4, align 8
  store %struct.ib_udata* %1, %struct.ib_udata** %5, align 8
  %7 = load i32, i32* @GFP_KERNEL, align 4
  %8 = call %struct.ehca_ucontext* @kzalloc(i32 4, i32 %7)
  store %struct.ehca_ucontext* %8, %struct.ehca_ucontext** %6, align 8
  %9 = load %struct.ehca_ucontext*, %struct.ehca_ucontext** %6, align 8
  %10 = icmp ne %struct.ehca_ucontext* %9, null
  br i1 %10, label %18, label %11

11:                                               ; preds = %2
  %12 = load %struct.ib_device*, %struct.ib_device** %4, align 8
  %13 = load %struct.ib_device*, %struct.ib_device** %4, align 8
  %14 = call i32 @ehca_err(%struct.ib_device* %12, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), %struct.ib_device* %13)
  %15 = load i32, i32* @ENOMEM, align 4
  %16 = sub nsw i32 0, %15
  %17 = call %struct.ib_ucontext* @ERR_PTR(i32 %16)
  store %struct.ib_ucontext* %17, %struct.ib_ucontext** %3, align 8
  br label %21

18:                                               ; preds = %2
  %19 = load %struct.ehca_ucontext*, %struct.ehca_ucontext** %6, align 8
  %20 = getelementptr inbounds %struct.ehca_ucontext, %struct.ehca_ucontext* %19, i32 0, i32 0
  store %struct.ib_ucontext* %20, %struct.ib_ucontext** %3, align 8
  br label %21

21:                                               ; preds = %18, %11
  %22 = load %struct.ib_ucontext*, %struct.ib_ucontext** %3, align 8
  ret %struct.ib_ucontext* %22
}

declare dso_local %struct.ehca_ucontext* @kzalloc(i32, i32) #1

declare dso_local i32 @ehca_err(%struct.ib_device*, i8*, %struct.ib_device*) #1

declare dso_local %struct.ib_ucontext* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
